adi1110.txt
このエラーメッセージは、snprintf 関数におけるフォーマット文字列の不一致に関する警告です。具体的には、%u というフォーマット指定子が unsigned int 型の引数を期待しているにもかかわらず、実際には u8 * (つまり unsigned char *) 型の引数 priv->spidev->chip_select が渡されている、ということを示しています。

これは、priv->spidev->chip_select の型がポインタであるか、または unsigned int よりも小さい整数型であるために発生しています。%u は通常、unsigned int を表示するために使用されます。

この問題を解決するには、priv->spidev->chip_select の型に合わせてフォーマット指定子を変更するか、unsigned int にキャストする必要があります。

以下に考えられる解決策をいくつか示します。

1. priv->spidev->chip_select が単なる数値である場合（ポインタではない場合）

もし priv->spidev->chip_select が u8 型（unsigned char）の単一の値であるならば、%u を使っても表示はされますが、警告をなくすためには unsigned int にキャストするのが最も簡単です。

C
snprintf(priv->mii_bus_name, MII_BUS_ID_SIZE, "%s-%u",
         priv->cfg->name, (unsigned int)priv->spidev->chip_select);
2. priv->spidev->chip_select がポインタである場合

もし priv->spidev->chip_select がポインタであり、そのポインタが指す先の値を表示したい場合は、ポインタをデリファレンス（間接参照）する必要があります。ただし、chip_select がポインタであることは一般的ではないかもしれません。

C
// 例: もし chip_select が u8 へのポインタである場合
snprintf(priv->mii_bus_name, MII_BUS_ID_SIZE, "%s-%u",
         priv->cfg->name, (unsigned int)*priv->spidev->chip_select);
priv->spidev->chip_selectの型を確認

最も重要なのは、priv->spidev->chip_select の実際の型を確認することです。ADIのドライバーでは、chip_selectは通常、SPIデバイスのチップセレクトラインの番号を示す整数値であることが多いです。

drivers/spi/spidev.h や関連する構造体の定義で priv->spidev や priv->spidev->chip_select の定義を探してみてください。そこから正確な型が分かります。

一般的には、chip_selectはunsigned intまたはそれより小さい整数型であることが多いので、解決策1の(unsigned int)priv->spidev->chip_selectで警告は解消される可能性が高いです。

この警告は「エラー」ではなく「警告」なので、コンパイルは通るかもしれませんが、正しい値を表示しなかったり、将来的な問題を引き起こす可能性があるので、修正することをお勧めします。


警告の解決: format ‘%u’ expects argument of type ‘unsigned int’, but argument 5 has type ‘u8 *’

これは以前にも説明した通り、snprintf関数で型が合っていないために出ています。

解決策:

adin1110.cファイルの559行目を以下のように修正してください。

C
// 修正前
snprintf(priv->mii_bus_name, MII_BUS_ID_SIZE, "%s-%u",
         priv->cfg->name, priv->spidev->chip_select);

// 修正後
snprintf(priv->mii_bus_name, MII_BUS_ID_SIZE, "%s-%u",
         priv->cfg->name, (unsigned int)priv->spidev->chip_select);
priv->spidev->chip_selectを(unsigned int)にキャストすることで、%uフォーマット指定子に期待される型と一致させ、警告を解消できます。chip_selectはSPIデバイスのチップ選択番号を示す整数値なので、この修正で問題ありません。

エラーの解決: ‘NETIF_F_NETNS_LOCAL’ undeclared

これは、NETIF_F_NETNS_LOCALというマクロが現在のLinuxカーネルヘッダーファイルで定義されていない、または利用できなくなっていることを示しています。これは、カーネルのバージョンアップに伴ってAPIが変更された結果としてよく起こります。

NETIF_F_NETNS_LOCALは、ネットワークデバイスが特定のネットワーク名前空間にローカルであることを示すフラグですが、近年ではこのフラグが使われなくなり、別の方法で管理されるようになっています。お使いのカーネルバージョン6.12.25+rpt-rpi-v8では、このフラグは削除されている可能性が高いです。

解決策:

adin1110.cファイルの1173行目にある、この定義されていないフラグを使用している行をコメントアウトするか削除してください。

C
// 修正前
netdev->features |= NETIF_F_NETNS_LOCAL;

// 修正後 (この行を削除するかコメントアウト)
// netdev->features |= NETIF_F_NETNS_LOCAL;
この行を削除しても、ADIN1110ドライバーの基本的な機能に影響はないはずです。カーネル側でこのフラグの管理方法が変わっているため、ドライバー側で設定する必要がなくなったと考えられます。

まとめと次のステップ

adin1110.cファイルを開く。
559行目を修正する。 priv->spidev->chip_selectを(unsigned int)にキャストする。
1173行目を修正する。 netdev->features |= NETIF_F_NETNS_LOCAL;の行をコメントアウトまたは削除する。
ファイルを保存する。
再度makeコマンドを実行する。
Bash
make -C /lib/modules/6.12.25+rpt-rpi-v8/build M=/home/t1ladmin/spehat_driver modules
 これらの修正でビルドが成功するはずです。もし別のエラーが出た場合は、またそのエラーメッセージを教えてください。




The programs included with the Debian GNU/Linux system are free software;
the exact distribution terms for each program are described in the
individual files in /usr/share/doc/*/copyright.

Debian GNU/Linux comes with ABSOLUTELY NO WARRANTY, to the extent
permitted by applicable law.
Last login: Sat Jun 14 14:39:52 2025
t1ladmin@t1l:~ $ cd spehat_driver
t1ladmin@t1l:~/spehat_driver $ make
make -C /lib/modules/6.12.25+rpt-rpi-v8/build M=/home/t1ladmin/spehat_driver modules
make[1]: ディレクトリ '/usr/src/linux-headers-6.12.25+rpt-rpi-v8' に入ります
  CC [M]  /home/t1ladmin/spehat_driver/adin1110.o
/home/t1ladmin/spehat_driver/adin1110.c: In function ‘adin1110_register_mdiobus’:
/home/t1ladmin/spehat_driver/adin1110.c:559:60: warning: format ‘%u’ expects argument of type ‘unsigned int’, but argument 5 has type ‘u8 *’ {aka ‘unsigned char *’} [-Wformat=]
  559 |         snprintf(priv->mii_bus_name, MII_BUS_ID_SIZE, "%s-%u",
      |                                                           ~^
      |                                                            |
      |                                                            unsigned int
      |                                                           %hhn
  560 |                  priv->cfg->name, priv->spidev->chip_select);
      |                                   ~~~~~~~~~~~~~~~~~~~~~~~~~ 
      |                                               |
      |                                               u8 * {aka unsigned char *}
/home/t1ladmin/spehat_driver/adin1110.c: In function ‘adin1110_probe_netdevs’:
/home/t1ladmin/spehat_driver/adin1110.c:1173:37: error: ‘NETIF_F_NETNS_LOCAL’ undeclared (first use in this function)
 1173 |                 netdev->features |= NETIF_F_NETNS_LOCAL;
      |                                     ^~~~~~~~~~~~~~~~~~~
/home/t1ladmin/spehat_driver/adin1110.c:1173:37: note: each undeclared identifier is reported only once for each function it appears in
make[3]: *** [/usr/src/linux-headers-6.12.25+rpt-common-rpi/scripts/Makefile.build:249: /home/t1ladmin/spehat_driver/adin1110.o] エラー 1
make[2]: *** [/usr/src/linux-headers-6.12.25+rpt-common-rpi/Makefile:1974: /home/t1ladmin/spehat_driver] エラー 2
make[1]: *** [/usr/src/linux-headers-6.12.25+rpt-common-rpi/Makefile:236: __sub-make] エラー 2
make[1]: ディレクトリ '/usr/src/linux-headers-6.12.25+rpt-rpi-v8' から出ます
make: *** [Makefile:9: all] エラー 2
t1ladmin@t1l:~/spehat_driver $ make
make -C /lib/modules/6.12.25+rpt-rpi-v8/build M=/home/t1ladmin/spehat_driver modules
make[1]: ディレクトリ '/usr/src/linux-headers-6.12.25+rpt-rpi-v8' に入ります
  CC [M]  /home/t1ladmin/spehat_driver/adin1110.o
/home/t1ladmin/spehat_driver/adin1110.c: In function ‘adin1110_register_mdiobus’:
/home/t1ladmin/spehat_driver/adin1110.c:559:60: warning: format ‘%u’ expects argument of type ‘unsigned int’, but argument 5 has type ‘u8 *’ {aka ‘unsigned char *’} [-Wformat=]
  559 |         snprintf(priv->mii_bus_name, MII_BUS_ID_SIZE, "%s-%u",
      |                                                           ~^
      |                                                            |
      |                                                            unsigned int
      |                                                           %hhn
  560 |                  priv->cfg->name, priv->spidev->chip_select);
      |                                   ~~~~~~~~~~~~~~~~~~~~~~~~~ 
      |                                               |
      |                                               u8 * {aka unsigned char *}
/home/t1ladmin/spehat_driver/adin1110.c: In function ‘adin1110_probe_netdevs’:
/home/t1ladmin/spehat_driver/adin1110.c:1173:37: error: ‘NETIF_F_NETNS_LOCAL’ undeclared (first use in this function)
 1173 |                 netdev->features |= NETIF_F_NETNS_LOCAL;
      |                                     ^~~~~~~~~~~~~~~~~~~
/home/t1ladmin/spehat_driver/adin1110.c:1173:37: note: each undeclared identifier is reported only once for each function it appears in
make[3]: *** [/usr/src/linux-headers-6.12.25+rpt-common-rpi/scripts/Makefile.build:249: /home/t1ladmin/spehat_driver/adin1110.o] エラー 1
make[2]: *** [/usr/src/linux-headers-6.12.25+rpt-common-rpi/Makefile:1974: /home/t1ladmin/spehat_driver] エラー 2
make[1]: *** [/usr/src/linux-headers-6.12.25+rpt-common-rpi/Makefile:236: __sub-make] エラー 2
make[1]: ディレクトリ '/usr/src/linux-headers-6.12.25+rpt-rpi-v8' から出ます
make: *** [Makefile:9: all] エラー 2
t1ladmin@t1l:~/spehat_driver $ make
make -C /lib/modules/6.12.25+rpt-rpi-v8/build M=/home/t1ladmin/spehat_driver modules
make[1]: ディレクトリ '/usr/src/linux-headers-6.12.25+rpt-rpi-v8' に入ります
  CC [M]  /home/t1ladmin/spehat_driver/adin1110.o
/home/t1ladmin/spehat_driver/adin1110.c: In function ‘adin1110_register_mdiobus’:
/home/t1ladmin/spehat_driver/adin1110.c:561:27: warning: cast from pointer to integer of different size [-Wpointer-to-int-cast]
  561 |          priv->cfg->name, (unsigned int)priv->spidev->chip_select);
      |                           ^
  MODPOST /home/t1ladmin/spehat_driver/Module.symvers
  CC [M]  /home/t1ladmin/spehat_driver/adin1110.mod.o
  CC [M]  /home/t1ladmin/spehat_driver/.module-common.o
  LD [M]  /home/t1ladmin/spehat_driver/adin1110.ko
make[1]: ディレクトリ '/usr/src/linux-headers-6.12.25+rpt-rpi-v8' から出ます
t1ladmin@t1l:~/spehat_driver $ make
make -C /lib/modules/6.12.25+rpt-rpi-v8/build M=/home/t1ladmin/spehat_driver modules
make[1]: ディレクトリ '/usr/src/linux-headers-6.12.25+rpt-rpi-v8' に入ります
  CC [M]  /home/t1ladmin/spehat_driver/adin1110.o
  MODPOST /home/t1ladmin/spehat_driver/Module.symvers
  CC [M]  /home/t1ladmin/spehat_driver/adin1110.mod.o
  LD [M]  /home/t1ladmin/spehat_driver/adin1110.ko
make[1]: ディレクトリ '/usr/src/linux-headers-6.12.25+rpt-rpi-v8' から出ます
t1ladmin@t1l:~/spehat_driver $ sudo cp adin1110.ko /lib/modules/$(uname -r)/kernel/drivers/net
t1ladmin@t1l:~/spehat_driver $ sudo depmod -a
t1ladmin@t1l:~/spehat_driver $ dtc -@ -I dts -O dtb -o adin1110.dtbo dts/bcm2835_adin1110.dtso
t1ladmin@t1l:~/spehat_driver $ sudo cp adin1110.dtbo /boot/overlays
t1ladmin@t1l:~/spehat_driver $ sudo nano /boot/firmware/config.txt
t1ladmin@t1l:~/spehat_driver $ sudo raspi-config
Interface Options -> SPI
-bash: Interface: コマンドが見つかりません
t1ladmin@t1l:~/spehat_driver $ sudo nano /etc/systemd/network/00-spe-hat-mac.link
t1ladmin@t1l:~/spehat_driver $ sudo reboot

Broadcast message from root@t1l on pts/4 (Sun 2025-06-15 11:11:41 JST):

The system will reboot now!

